--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 
         <link rel="canonical" url="https://www.johnparrett.com">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-        <link rel="icon" type="image/svg" href="https://d1ujqdpfgkvqfi.cloudfront.net/favicon-generator/htdocs/favicons/2020-10-02/f55c06b41ea225dcca61915f341153c8.ico.png">
-        
+        <link rel="icon" type="image/svg" href="./assets/favicon.ico">
+
         <script src="app.js"></script>
 </head>
 <body>
     <header>
         <div>
-            <a class="logo" href="#"><h2 class="logo-title">The Paperweights</h2></a>
+            <a class="logo" href="http://thepaperweightsband.com/"><h2 class="logo-title">The Paperweights</h2></a>
         </div>
        
         <nav class="center-social">
