--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         
         <link type="text/css" rel="stylesheet" href="style.css">
         <link type="text/css" rel="stylesheet" href="query.style.css">
-        <link type="text/css" rel="stylesheet" href="mouseanimation.style.css">
 
         <link rel="canonical" url="https://www.johnparrett.com">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -67,7 +66,7 @@
                     <br>
                     <br>
                     Having played together for nearly a decade, 
-                    singer/guitar Taylor Day and drummer John Parrett play a mix of original and cover music. 
+                    singer/guitarist Taylor Day and drummer John Parrett play a mix of original and cover music. 
                     Catch them at various locations in and around Central Ohio!
                 </div>
               </div>
@@ -75,7 +74,7 @@
         <div class="listen">
             <h2 class="h2-music">Listen to our Music</h2>
             <div class="music-player">
-                <iframe width="75%" height="500" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1246083988&color=%23575757&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+                <iframe width="50%" height="500" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1246083988&color=%23575757&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                 <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
                     <a href="https://soundcloud.com/user-999946115" title="The Paperweights" target="_blank" style="color: #cccccc; text-decoration: none;"></a><a href="https://soundcloud.com/user-999946115/sets/the-paperweights" title="The Paperweights" target="_blank" style="color: #cccccc; text-decoration: none;"></a>
                 </div>
