--- a/shows.html
+++ b/shows.html
@@ -21,7 +21,7 @@
 
         
         <link type="text/css" rel="stylesheet" href="style.css">
-        <link type="text/css" rel="stylesheet" href="mouseanimation.style.css">
+        <link type="text/css" rel="stylesheet" href="query.style.css">
 
         <link rel="canonical" url="https://www.johnparrett.com">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -59,35 +59,54 @@
             <h2 class="h2">Come See Us Play!</h2>
             <div class="show-container"  id="show">
                 <div class="event show-element1">
-                    <p>{{ date[1] }}</p>
-                    <p>{{ time[1] }}</p>
-                    <p>{{ location[1] }}</p>
+                    <p class="date">{{ date[1] }}</p>
+                    <p class="time">{{ time[2] }}</p>
+                    <p class="location">{{ location[1] }}</p>
                 </div>
                 <div class="event show-element2">
-                    <p>{{ date[2] }}</p>
-                    <p>{{ time[2] }}</p>
-                    <p>{{ location[2] }}</p>
+                    <p class="date">{{ date[2] }}</p>
+                    <p class="time">{{ time[1] }}</p>
+                    <p class="location">{{ location[2] }}</p>
                 </div>
                 <div class="event show-element3">
-                    <p>{{ date[3] }}</p>
-                    <p>{{ time[2] }}</p>
-                    <p>{{ location[1] }}</p>
+                    <p class="date">{{ date[3] }}</p>
+                    <p class="time">{{ time[1] }}</p>
+                    <p class="location">{{ location[2] }}</p>
                 </div>
                 <div class="event show-element4">
-                    <p>{{ date[4] }}</p>
-                    <p>{{ time[1] }}</p>
-                    <p>{{ location[2] }}</p>
+                    <p class="date">{{ date[4] }}</p>
+                    <p class="time">{{ time[2] }}</p>
+                    <p class="location">{{ location[1] }}</p>
                 </div>
                 <div class="event show-element5">
-                    <p>{{ date[5] }}</p>
-                    <p>{{ time[2] }}</p>
-                    <p>{{ location[1] }}</p>
+                    <p class="date">{{ date[5] }}</p>
+                    <p class="time">{{ time[2] }}</p>
+                    <p class="location">{{ location[1] }}</p>
                 </div>
-                
+                <div class="event show-element6">
+                    <p class="date">{{ date[6] }}</p>
+                    <p class="time">{{ time[2] }}</p>
+                    <p class="location">{{ location[1] }}</p>
+                </div>
+                <div class="event show-element7">
+                    <p class="date">{{ date[7] }}</p>
+                    <p class="time">{{ time[2] }}</p>
+                    <p class="location">{{ location[1] }}</p>
+                </div>
+                <div class="event show-element8">
+                    <p class="date">{{ date[8] }}</p>
+                    <p class="time">{{ time[1] }}</p>
+                    <p class="location">{{ location[2] }}</p>
+                </div>
+                <div class="event show-element9">
+                    <p class="date">{{ date[9] }}</p>
+                    <p class="time">{{ time[2] }}</p>
+                    <p class="location">{{ location[1] }}</p>
+                </div>
                 <div class="event show-element-last">
-                    <p>{{ date[0] }}</p>
-                    <p>{{ time[0] }}</p>
-                    <p>{{ location[0] }}</p>
+                    <p class="date">{{ date[0] }}</p>
+                    <p class="time">{{ time[0] }}</p>
+                    <p class="location">{{ location[0] }}</p>
                 </div>
             </div>
                  <!-- 
