fixed facebook link, adjusted responsive navbar menus

--- a/shows.html
+++ b/shows.html
@@ -38,7 +38,7 @@
        
         <nav class="center-social">
             <ul class="guide">
-                <a class="nav-btn" href="https://www.facebook.com/ThePaperweights/" target="_blank"><li><img class="social-img" src="https://img.icons8.com/material-sharp/30/000000/facebook-new.png"/></li></a>
+                <a class="nav-btn" href="https://www.facebook.com/ThePaperweightsBand/" target="_blank"><li><img class="social-img" src="https://img.icons8.com/material-sharp/30/000000/facebook-new.png"/></li></a>
                 <a class="nav-btn" href="https://www.instagram.com/thepaperweightsband/" target="_blank"><li><img class="social-img" src="https://img.icons8.com/material-sharp/30/000000/instagram-new.png"/></li></a>
                 <a class="nav-btn" href="https://soundcloud.com/user-999946115" target="_blank"><li><img class="social-img" src="https://img.icons8.com/metro/30/000000/soundcloud.png" /></li></a>
             </ul>
