added OG:img and fixed margin on home page about section response.

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="">
         <meta property="og:description" content="">
-        <meta property="og:image" content="" />
+        <meta property="og:image" content="assets/text-link-img.png" />
 
         
         <link type="text/css" rel="stylesheet" href="style.css">
         <link type="text/css" rel="stylesheet" href="query.style.css">
 
-        <link rel="canonical" url="https://www.johnparrett.com">
+        <link rel="canonical" url="https://www.thepaperweightsband.com">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
         <link rel="icon" type="image/svg" href="./assets/favicon.ico">
 
