added calendar event generator, SEO optimization

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="">
         <meta property="og:description" content="">
-        <meta property="og:image" content="" />
+        <meta property="og:image" content="assets/text-link-img.png" />
 
         
         <link type="text/css" rel="stylesheet" href="style.css">
