--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
 
         <meta charset="uft-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="title" content="">
-        <meta name="description" content="">
-        <meta name="keywords" content="">
-        <meta name="referrer" content="">
+        <meta name="title" content="The Paperweights">
+        <meta name="description" content="The Offical Website for Everything related to The Paperweights">
+        <meta name="keywords" content="the paperweights, paperweights, The Paperweights, Paperweights, live music, live music hire, gig, band, band columbus ohio, live music columbus ohio, alternative, alternative rock, greatest band ever, wedding band, opening band, festival band, up and coming band, new release, local, music, talent, live music near me">
+        <meta name="referrer" content="origin-when-cross-origin">
 
         <title>The Paperweights</title>
 
-        <meta property="og:site_name" content="">
-        <meta property="og:url" content="">
+        <meta property="og:site_name" content="The Paperweights">
+        <meta property="og:url" content="http://www.thepaperweightsband.com">
         <meta property="og:type" content="website">
-        <meta property="og:title" content="">
-        <meta property="og:description" content="">
+        <meta property="og:title" content="The Paperweights Official Band Website">
+        <meta property="og:description" content="The Offical website for everything related to The Paperweights">
         <meta property="og:image" content="assets/text-link-img.png" />
 
         
