fixed logo link

--- a/shows.html
+++ b/shows.html
@@ -33,7 +33,7 @@
 <body>
     <header>
         <div>
-            <a class="logo" href="#"><h2 class="logo-title">The Paperweights</h2></a>
+            <a class="logo" href="https://www.thepaperweightsband.com"><h2 class="logo-title">The Paperweights</h2></a>
         </div>
        
         <nav class="center-social">
