--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         <link type="text/css" rel="stylesheet" href="style.css">
         <link type="text/css" rel="stylesheet" href="query.style.css">
 
-        <link rel="canonical" url="https://www.johnparrett.com">
+        <link rel="canonical" url="https://www.thepaperweightsband.com">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
         <link rel="icon" type="image/svg" href="./assets/favicon.ico">
         
@@ -32,7 +32,7 @@
 <body>
     <header>
         <div>
-            <a class="logo" href="#"><h2 class="logo-title">The Paperweights</h2></a>
+            <a class="logo" href="https://www.thepaperweightsband.com"><h2 class="logo-title">The Paperweights</h2></a>
         </div>
        
         <nav class="center-social">
