--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <link type="text/css" rel="stylesheet" href="query.style.css">
 
         <link rel="canonical" url="https://www.thepaperweightsband.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
         <link rel="icon" type="image/svg" href="./assets/favicon.ico">
 
@@ -32,7 +34,7 @@
 <body>
     <header>
         <div>
-            <a class="logo" href="http://thepaperweightsband.com/"><h2 class="logo-title">The Paperweights</h2></a>
+            <a class="logo" href="https://thepaperweightsband.com/"><h2 class="logo-title">The Paperweights</h2></a>
         </div>
        
         <nav class="center-social">
