--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="listen">
             <h2 class="h2-music">Listen to our Music</h2>
             <div class="music-player">
-                <iframe width="60%" height="500" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1246083988&color=%23575757&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+                <iframe width="60%" height="350" scrolling="no"  allow="autoplay" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1246083988&color=%23575757&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=false&visual=false"></iframe>
                 <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
                     <a href="https://soundcloud.com/user-999946115" title="The Paperweights" target="_blank" style="color: #cccccc; text-decoration: none;"></a><a href="https://soundcloud.com/user-999946115/sets/the-paperweights" title="The Paperweights" target="_blank" style="color: #cccccc; text-decoration: none;"></a>
                 </div>
