--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <meta name="description" content="The Offical Website for Everything related to The Paperweights">
         <meta name="keywords" content="the paperweights, paperweights, The Paperweights, Paperweights, live music, live music hire, gig, band, band columbus ohio, live music columbus ohio, alternative, alternative rock, greatest band ever, wedding band, opening band, festival band, up and coming band, new release, local, music, talent, live music near me">
         <meta name="referrer" content="origin-when-cross-origin">
+        <meta name="google-site-verification" content="wtgf9OGN8HNTETNI8m2pKuLhMtulgTNlcmh09r_F67Y" />
 
         <title>The Paperweights</title>
 
