--- a/shows.html
+++ b/shows.html
@@ -59,61 +59,55 @@
             <h2 class="h2">Come See Us Play!</h2>
             <div class="show-container"  id="show">
                 <div class="event show-element1">
-                    <p class="date">{{ date[1] }}</p>
-                    <p class="time">{{ time[2] }}</p>
-                    <p class="location">{{ location[1] }}</p>
-                    <a target="_blank" href="https://calendar.google.com/calendar/render?action=TEMPLATE&dates=20210529T220000Z%2F20210530T000000Z&location=Bridge%20Park%20-%20Dublin%2C%20Ohio&text=The%20Paperweights%20Live%21" title="Save Event in my Calendar"><button class="calendar-btn">Add to Calendar</button></a>
-                </div>
-                <div class="event show-element2">
-                    <p class="date">{{ date[2] }}</p>
+                    <p class="date">June 12th, 2021</p>
                     <p class="time">{{ time[1] }}</p>
                     <p class="location">{{ location[2] }}</p>
                     <a target="_blank" href="https://calendar.google.com/calendar/render?action=TEMPLATE&dates=20210612T200000Z%2F20210612T220000Z&location=Brewdog%20-%20Franklinton&text=The%20Paperweights%20Live%21" title="Save Event in my Calendar"><button class="calendar-btn">Add to Calendar</button></a>
                 </div>
-                <div class="event show-element3">
-                    <p class="date">{{ date[3] }}</p>
+                <div class="event show-element2">
+                    <p class="date">June 20th, 2021</p>
                     <p class="time">{{ time[1] }}</p>
                     <p class="location">{{ location[2] }}</p>
                     <a target="_blank" href="https://calendar.google.com/calendar/render?action=TEMPLATE&dates=20210620T200000Z%2F20210620T220000Z&location=Brewdog%20-%20Franklinton&text=The%20Paperweights%20Live%21" title="Save Event in my Calendar"><button class="calendar-btn">Add to Calendar</button></a>
                 </div>
-                <div class="event show-element4">
-                    <p class="date">{{ date[4] }}</p>
+                <div class="event show-element3">
+                    <p class="date">June 26th, 2021</p>
                     <p class="time">{{ time[2] }}</p>
                     <p class="location">{{ location[1] }}</p>
                     <a target="_blank" href="https://calendar.google.com/calendar/render?action=TEMPLATE&dates=20210626T220000Z%2F20210627T000000Z&location=Bridge%20Park%20-%20Dublin%2C%20Ohio&text=The%20Paperweights%20Live%21" title="Save Event in my Calendar"><button class="calendar-btn">Add to Calendar</button></a>
                 </div>
-                <div class="event show-element5">
-                    <p class="date">{{ date[5] }}</p>
+                <div class="event show-element4">
+                    <p class="date">August 14th, 2021</p>
                     <p class="time">{{ time[2] }}</p>
                     <p class="location">{{ location[1] }}</p>
                     <a target="_blank" href="https://calendar.google.com/calendar/render?action=TEMPLATE&dates=20210814T220000Z%2F20210815T000000Z&location=Bridge%20Park%20-%20Dublin%2C%20Ohio&text=The%20Paperweights%20Live%21" title="Save Event in my Calendar"><button class="calendar-btn">Add to Calendar</button></a>
                 </div>
-                <div class="event show-element6">
-                    <p class="date">{{ date[6] }}</p>
+                <div class="event show-element5">
+                    <p class="date">August 28th, 2021</p>
                     <p class="time">{{ time[2] }}</p>
                     <p class="location">{{ location[1] }}</p>
                     <a target="_blank" href="https://calendar.google.com/calendar/render?action=TEMPLATE&dates=20210828T220000Z%2F20210829T000000Z&location=Bridge%20Park%20-%20Dublin%2C%20Ohio&text=The%20Paperweights%20Live%21" title="Save Event in my Calendar"><button class="calendar-btn">Add to Calendar</button></a>
                 </div>
-                <div class="event show-element7">
-                    <p class="date">{{ date[7] }}</p>
+                <div class="event show-element6">
+                    <p class="date">September 11th, 2021</p>
                     <p class="time">{{ time[2] }}</p>
                     <p class="location">{{ location[1] }}</p>
                     <a target="_blank" href="https://calendar.google.com/calendar/render?action=TEMPLATE&dates=20210911T220000Z%2F20210912T000000Z&location=Bridge%20Park%20-%20Dublin%2C%20Ohio&text=The%20Paperweights%20Live%21" title="Save Event in my Calendar"><button class="calendar-btn">Add to Calendar</button></a>
                 </div>
-                <div class="event show-element8">
-                    <p class="date">{{ date[8] }}</p>
+                <div class="event show-element7">
+                    <p class="date">September 12th, 2021</p>
                     <p class="time">{{ time[1] }}</p>
                     <p class="location">{{ location[2] }}</p>
                     <a target="_blank" href="https://calendar.google.com/calendar/render?action=TEMPLATE&dates=20210912T200000Z%2F20210912T220000Z&location=Brewdog%20-%20Franklinton&text=The%20Paperweights%20Live%21" title="Save Event in my Calendar"><button class="calendar-btn">Add to Calendar</button></a>
                 </div>
-                <div class="event show-element9">
-                    <p class="date">{{ date[9] }}</p>
+                <div class="event show-element8">
+                    <p class="date">September 25th, 2021</p>
                     <p class="time">{{ time[2] }}</p>
                     <p class="location">{{ location[1] }}</p>
                     <a target="_blank" href="https://calendar.google.com/calendar/render?action=TEMPLATE&dates=20210925T220000Z%2F20210926T000000Z&location=Bridge%20Park%20-%20Dublin%2C%20Ohio&text=The%20Paperweights%20Live%21" title="Save Event in my Calendar"><button class="calendar-btn">Add to Calendar</button></a>
                 </div>
                 <div class="event show-element-last">
-                    <p class="date">{{ date[0] }}</p>
+                    <p class="date">More Dates to Come!</p>
                     <p class="time">{{ time[0] }}</p>
                     <p class="location">{{ location[0] }}</p>
                 </div>
