added more show's for this summer, more to come

--- a/shows.html
+++ b/shows.html
@@ -64,23 +64,75 @@
                     <p class='location'><a class='location-website' href='https://parsonsnorth.com/' target="_blank">Parsons North Brewing Company</a><br>- Columbus, Ohio -</p>
                 </div>
                 <div class="event show-element-2">
-                    <p class='date'>Sunday, May 7th</p>
+                    <p class='date'>Saturday, May 7th</p>
+                    <p class='time'>4:00 pm - 6:00 pm</p>
+                    <p class='location'><a class='location-website' href='https://www.bridgepark.com/' target="_blank">Bridge Park</a><br>- Dublin, Ohio -</p>
+                </div>
+                <div class="event show-element-3">
+                    <p class='date'>Saturday, May 7th</p>
                     <p class='time'>8:00 pm - 10:30 pm</p>
                     <p class='location'><a class='location-website' href='https://threetigersbrewing.com/' target="_blank">Three Tigers Brewery Company</a><br>- Granville, Ohio -</p>
                 </div>
-                <div class="event show-element-3">
+                <div class="event show-element-4">
                     <p class='date'>Sunday, May 15th</p>
                     <p class='time'>2:00 pm - 4:00 pm</p>
-                    <p class='location'><a class='location-website' href='https://parsonsnorth.com/' target="_blank">Parsons North Brewing Company</a><br>- Columbus, Ohio -</p>                </div>
-                <div class="event show-element-4">
+                    <p class='location'><a class='location-website' href='https://parsonsnorth.com/' target="_blank">Parsons North Brewing Company</a><br>- Columbus, Ohio -</p>                
+                </div>
+                <div class="event show-element-5">
+                    <p class='date'>Sunday, May 28th</p>
+                    <p class='time'>4:00 pm - 6:00 pm</p>
+                    <p class='location'><a class='location-website' href='https://www.bridgepark.com/' target="_blank">TBD, Bridge Park</a><br>- Dublin, Ohio -</p>
+                </div>
+                <div class="event show-element-6">
                     <p class='date'>Sunday, June 5th. </p>
                     <p class='time'>2:00 pm - 4:00 pm</p>
-                    <p class='location'><a class='location-website' href='https://parsonsnorth.com/' target="_blank">Parsons North Brewing Company</a><br>- Columbus, Ohio -</p>                </div>
+                    <p class='location'><a class='location-website' href='https://parsonsnorth.com/' target="_blank">Parsons North Brewing Company</a><br>- Columbus, Ohio -</p>                
+                </div>
+                <div class="event show-element-7">
+                    <p class='date'>Sunday, July 9th</p>
+                    <p class='time'>4:00 pm - 6:00 pm</p>
+                    <p class='location'><a class='location-website' href='https://www.bridgepark.com/' target="_blank">TBD, Bridge Park</a><br>- Dublin, Ohio -</p>
+                </div>
+                <div class="event show-element-8">
+                    <p class='date'>Sunday, Sept. 10th</p>
+                    <p class='time'>4:00 pm - 6:00 pm</p>
+                    <p class='location'><a class='location-website' href='https://www.bridgepark.com/' target="_blank">TBD, Bridge Park</a><br>- Dublin, Ohio -</p>
+                </div>
                 <div class="event show-element-last">
                     <p class="date">New Shows Coming!</p>
                     <p class="time">Check Back Soon!</p>
                     <p class="location">Coming to a Town Near You!</p>
                 </div>
+                <!-- <div class="event show-element-">
+                    <p class='date'>Sunday, June 7th</p>
+                    <p class='time'>7:00 pm - 9:00 pm</p>
+                    <p class='location'><a class='location-website' href='https://www.buxtoninn.com/' target="_blank">Buxton Inn</a><br>- Granville, Ohio -</p>
+                </div>
+                <div class="event show-element-">
+                    <p class='date'>Sunday, June 17th</p>
+                    <p class='time'>7:00 pm - 9:00 pm</p>
+                    <p class='location'><a class='location-website' href='https://www.buxtoninn.com/' target="_blank">Buxton Inn</a><br>- Granville, Ohio -</p>
+                </div>
+                <div class="event show-element-">
+                    <p class='date'>Sunday, August 2nd</p>
+                    <p class='time'>7:00 pm - 9:00 pm</p>
+                    <p class='location'><a class='location-website' href='https://www.buxtoninn.com/' target="_blank">Buxton Inn</a><br>- Granville, Ohio -</p>
+                </div>
+                <div class="event show-element-">
+                    <p class='date'>Sunday, August 19th</p>
+                    <p class='time'>7:00 pm - 9:00 pm</p>
+                    <p class='location'><a class='location-website' href='https://www.buxtoninn.com/' target="_blank">Buxton Inn</a><br>- Granville, Ohio -</p>
+                </div>
+                <div class="event show-element-">
+                    <p class='date'>Sunday, Sept. 2nd</p>
+                    <p class='time'>7:00 pm - 9:00 pm</p>
+                    <p class='location'><a class='location-website' href='https://www.buxtoninn.com/' target="_blank">Buxton Inn</a><br>- Granville, Ohio -</p>
+                </div>
+                <div class="event show-element-">
+                    <p class='date'>Sunday, Sept 13thth</p>
+                    <p class='time'>7:00 pm - 9:00 pm</p>
+                    <p class='location'><a class='location-website' href='https://www.buxtoninn.com/' target="_blank">Buxton Inn</a><br>- Granville, Ohio -</p>
+                </div> -->
             </div>
                  <!-- 
                     template for more show elements
@@ -88,7 +140,7 @@
                     <div class="event show-element-">
                         <p>{{ date }}</p>
                         <p>{{ time }}</p>
-                        <p>{{ locatio }}</p>
+                        <p>{{ location }}</p>
                     </div>
                 -->
         </div>
