added more specific site name

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
         <title>The Paperweights</title>
 
-        <meta property="og:site_name" content="The Paperweights">
+        <meta property="og:site_name" content="The Paperweights Band">
         <meta property="og:url" content="http://www.thepaperweightsband.com">
         <meta property="og:type" content="website">
         <meta property="og:title" content="The Paperweights Official Band Website">
-        <meta property="og:description" content="The Offical website for everything related to The Paperweights">
+        <meta property="og:description" content="The official website for everything related to The Paperweights">
         <meta property="og:image" content="assets/text-link-img.png" />
 
         
