--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <title>The Paperweights</title>
 
         <meta property="og:site_name" content="The Paperweights Band">
-        <meta property="og:url" content="http://www.thepaperweightsband.com">
+        <meta property="og:url" content="https://www.thepaperweightsband.com">
         <meta property="og:type" content="website">
         <meta property="og:title" content="The Paperweights Official Band Website">
         <meta property="og:description" content="The official website for everything related to The Paperweights">
