updated schedule. updated bio. worked on responsive design

--- a/index.html
+++ b/index.html
@@ -64,12 +64,15 @@
                     <img class="band-photo-img" src="assets/band.png" alt="band photo" />
                 </div>
                 <div class="about-info">
-                    The Paperweights are a two-piece alternative rock band that joined the Columbus
-                    music scene in early 2017.
+                    The Paperweights are a two-piece band that joined the Central Ohio
+                    music scene in 2017.  This dynamic duo plays all your favorite covers, 
+                    as well as their own original music.  
                     <br>
                     <br>
-                    Having played together for nearly a decade, 
-                    singer/guitarist Taylor Day and drummer John Parrett play a mix of original and cover music. 
+                    Having played at holiday festivals, brewery taprooms, corporate events, concert halls,  
+                    street corners, bars and restaurants. This band is ready to play anytime, anywhere!
+                    <br>
+                    <br>
                     Catch them at various locations in and around Central Ohio!
                 </div>
               </div>
