--- a/shows.html
+++ b/shows.html
@@ -73,19 +73,39 @@
                     <p class='location'><a class='location-website' href='https://www.bridgepark.com/' target="_blank">TBD, Bridge Park</a><br>- Dublin, Ohio -</p>
                 </div>
                 <div class="event show-element-4">
+                    <p class='date'>Saturday, August 6th</p>
+                    <p class='time'>3:00 pm - 5:00 pm</p>
+                    <p class='location'><a class='location-website' href='https://www.parsonsnorth.com/' target="_blank">Parsons North Brewing Co.</a><br>- Columbus, Ohio -</p>
+                </div>
+                <div class="event show-element-5">
                     <p class='date'>Friday, August 19th</p>
                     <p class='time'>7:00 pm - 9:00 pm</p>
                     <p class='location'><a class='location-website' href='https://www.buxtoninn.com/' target="_blank">Buxton Inn</a><br>- Granville, Ohio -</p>
                 </div>
-                <div class="event show-element-5">
+                <div class="event show-element-6">
+                    <p class='date'>Sunday, August 21th</p>
+                    <p class='time'>4:00 pm - 6:00 pm</p>
+                    <p class='location'><a class='location-website' href='https://www.parsonsnorth.com/' target="_blank">Parsons North Brewing Co.</a><br>- Columbus, Ohio -</p>
+                </div>
+                <div class="event show-element-7">
+                    <p class='date'>Saturday, Sept. 3th</p>
+                    <p class='time'>3:00 pm - 5:00 pm</p>
+                    <p class='location'><a class='location-website' href='https://www.parsonsnorth.com/' target="_blank">Parsons North Brewing Co.</a><br>- Columbus, Ohio -</p>
+                </div>
+                <div class="event show-element-8">
                     <p class='date'>Saturday, Sept. 10th</p>
                     <p class='time'>4:00 pm - 6:00 pm</p>
                     <p class='location'><a class='location-website' href='https://www.bridgepark.com/' target="_blank">TBD, Bridge Park</a><br>- Dublin, Ohio -</p>
                 </div>
-                <div class="event show-element-6">
+                <div class="event show-element-9">
                     <p class='date'>Tuesday, Sept 13th</p>
                     <p class='time'>7:00 pm - 9:00 pm</p>
                     <p class='location'><a class='location-website' href='https://www.buxtoninn.com/' target="_blank">Buxton Inn</a><br>- Granville, Ohio -</p>
+                </div>
+                <div class="event show-element-10">
+                    <p class='date'>Saturday, Sept. 24th</p>
+                    <p class='time'>3:00 pm - 5:00 pm</p>
+                    <p class='location'><a class='location-website' href='https://www.parsonsnorth.com/' target="_blank">Parsons North Brewing Co.</a><br>- Columbus, Ohio -</p>
                 </div>
                 <div class="event show-element-last">
                     <p class="date">New Shows Coming!</p>
