changed date september 24 to october 1

--- a/shows.html
+++ b/shows.html
@@ -88,12 +88,12 @@
                     <p class='location'><a class='location-website' href='https://www.bridgepark.com/' target="_blank">TBD, Bridge Park</a><br>- Dublin, Ohio -</p>
                 </div>
                 <div class="event show-element-7">
-                    <p class='date'>Tuesday, Sept 13th</p>
+                    <p class='date'>Tuesday, Sept. 13th</p>
                     <p class='time'>7:00 pm - 9:00 pm</p>
                     <p class='location'><a class='location-website' href='https://www.buxtoninn.com/' target="_blank">Buxton Inn</a><br>- Granville, Ohio -</p>
                 </div>
                 <div class="event show-element-8">
-                    <p class='date'>Saturday, Sept. 24th</p>
+                    <p class='date'>Saturday, Oct. 1st</p>
                     <p class='time'>3:00 pm - 5:00 pm</p>
                     <p class='location'><a class='location-website' href='https://www.parsonsnorth.com/' target="_blank">Parsons North Brewing Co.</a><br>- Columbus, Ohio -</p>
                 </div> 
