cleaned up site

--- a/index.html
+++ b/index.html
@@ -64,21 +64,24 @@
                     <img class="band-photo-img" src="assets/band.png" alt="band photo" />
                 </div>
                 <div class="about-info">
-                    The Paperweights are a two-piece band that joined the Central Ohio
-                    music scene in 2017.  This dynamic duo plays all your favorite covers, 
-                    as well as their own original music.  
+                    The Paperweights, a duo that started making music in 2017, 
+                    quickly became part of the Central Ohio music scene. 
+                    They play a mix of popular covers and their original songs. 
                     <br>
                     <br>
-                    Having played at holiday festivals, brewery taprooms, corporate events, concert halls,  
-                    street corners, bars and restaurants. This band is ready to play anytime, anywhere!
+                    They've performed at a variety of venues, from holiday festivals 
+                    and cozy brewery taprooms to corporate events, concert halls, 
+                    street corners, bars, and restaurants. The band is always ready 
+                    to play at different locations.
                     <br>
                     <br>
-                    Catch them at various locations in and around Central Ohio!
+                    You can see The Paperweights performing at various places in and 
+                    around Central Ohio. Don't miss the chance to enjoy their music live!
                 </div>
               </div>
         </div>
         <div class="listen">
-            <h2 class="h2-music">Some of our Music</h2>
+            <h2 class="h2-music">Our Soundcloud</h2>
             <div class="music-player">
                 <iframe width="60%" height="350" scrolling="no"  allow="autoplay" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1246083988&color=%23575757&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=false&visual=false"></iframe>
                 <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
