--- a/shows.html
+++ b/shows.html
@@ -55,17 +55,11 @@
             <h1>Upcoming Shows</h1>
         </div>
         <div class="container">
-            <h2 class="h2"></h2>
             <div class="show-container"  id="show">
-                <div class="event show-element-1">
-                    <p class='date'>Saturday, Oct. 1st</p>
-                    <p class='time'>3:00 pm - 5:00 pm</p>
-                    <p class='location'><a class='location-website' href='https://www.parsonsnorth.com/' target="_blank">Parsons North Brewing Co.</a><br>- Columbus, Ohio -</p>
-                </div> 
                 <div class="event show-element-last">
-                    <p class="date">New Shows Coming!</p>
-                    <p class="time">Check Back Soon!</p>
-                    <p class="location">Coming to a Town Near You!</p>
+                    <p class="date">We are Recording an Album</p>
+                    <p class="time">Check Back Soon</p>
+                    <!-- <p class="location">New Shows Coming!</p> -->
                 </div>
             </div>
                  <!-- 
