added merch and adjusted bottom-contact container

--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
-
         <meta charset="uft-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="title" content="">
@@ -47,6 +45,8 @@
             <ul class="guide">
                 <a class="nav-btn" href="index.html"><li>Home</li></a>
                 <a class="nav-btn" href="shows.html"><li>Shows</li></a>
+                <a class="nav-btn" href="merch.html"><li>Merch</li></a>
+
             </ul>
         </nav>
     </header>
@@ -86,8 +86,7 @@
             <p class="band-info">Book us for your festival, special event, wedding, venue or party</p>
         </div> 
         <div class="bottom-contact container">
-            <h3 class="h3">Where are we Playing Next?</h3>
-            <a href="shows.html"><button class="contact-btn">Find Out!</button>
+            <a id="contact-bottom-link" href="shows.html"><h3 class="h3">Where are we Playing Next?</h3></a>
         </div> 
     </main>
     <footer>
