--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <ul class="guide">
                 <a class="nav-btn" href="shows.html"><li>Shows</li></a>
                 <a class="nav-btn" href="contact.html"><li>Contact</li></a>
+                <a class="nav-btn" href="merch.html"><li>Merch</li></a>
             </ul>
         </nav>
     </header>
@@ -90,9 +91,8 @@
             </div>
         </div>
         <div class="bottom-contact container">
-            <h3 class="h3">Would you like to book the band?</h3>
-            <a href="contact.html"><button class="contact-btn">Contact Us!</button>
-        </div> 
+            <a id="contact-bottom-link" href="contact.html"><h3 class="h3">Would you like to book the band?</h3></a>
+        </div>  
     </main>
     <footer>
         <ul class="footer-grid-container">
