--- a/shows.html
+++ b/shows.html
@@ -47,6 +47,7 @@
             <ul class="guide">
                 <a class="nav-btn" href="index.html"><li>Home</li></a>
                 <a class="nav-btn" href="contact.html"><li>Contact</li></a>
+                <a class="nav-btn" href="merch.html"><li>Merch</li></a>
             </ul>
         </nav>
     </header>
@@ -74,13 +75,12 @@
         </div>
         
         <div class="h3-music">
-            <h3>Bands We Cover</h3>
-            <p class="band-info">The Killers - The Beatles - Amy Winehouse - Bob Dylan - Britney Spears - Many More!</p>
+            <h3>WE PLAY A MIX OF ORIGINALS AND COVERS</h3>
+            <h4>We are able to take requests and will attempt any song we "know"</h4>
         </div> 
         <div class="bottom-contact container">
-            <h3 class="h3">Would you like to book the band?</h3>
-            <a href="contact.html"><button class="contact-btn">Contact Us!</button>
-        </div> 
+            <a id="contact-bottom-link" href="contact.html"><h3 class="h3">Would you like to book the band?</h3></a>
+        </div>  
     </main>
     <footer>
         <ul class="footer-grid-container">
